# SanguoshaClient

./: .gitignore  CMakeLists.txt  CMakeLists.txt.autosave  README.md  login_dialog.cpp  login_dialog.h  login_dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
network/: networkmanager.cpp  networkmanager.h
proto/: sanguosha.pb.cc  sanguosha.pb.h  sanguosha.proto
ui/: mainwindow.cpp  mainwindow.h
